syntax = "proto3";

option go_package = "github.com/koliader/posts-gateway/internal/pb";

message UserEntity {
  string email = 1;
  string username = 2;
  string password = 3;
}

message PostEntity {
  string title = 1;
  string body = 2;
  string ownerEmail = 3;
}
message Empty {}