syntax = "proto3";

option go_package = "github.com/koliader/posts-gateway/internal/pb";
import "Entities.proto";

service Post {
  rpc CreatePost(CreatePostReq) returns (CreatePostRes) {}
  rpc GetPost(GetPostReq) returns (GetPostRes) {}
  rpc ListPosts(Empty) returns (ListPostsRes) {}
  rpc ListPostsByUser(ListPostsByUserReq) returns (ListPostsRes) {}
}

message CreatePostReq {
  string owner = 1;
  string title = 2;
  string body = 3;
}

message CreatePostRes {
  PostEntity post = 1;
}

message GetPostReq {
  string title = 1;
}

message GetPostRes {
  PostEntity post = 1;
}

message ListPostsByUserReq {
  string owner = 1;
}

message ListPostsRes {
  repeated PostEntity Posts = 1;
}
